--- a/template_src/www/index.html
+++ b/template_src/www/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-
+<!-- TESTING!!! -->
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
