Individual country table styling

--- a/template_src/www/index.html
+++ b/template_src/www/index.html
@@ -64,37 +64,37 @@
             <div class="center desc-card" style="padding-left: 10%;">
                 <table>
                 <tr> 
-                     <td>Total Confirmed: </td>
+                     <td class="table-hd">Total Confirmed: </td>
                      <td>
                     <p class="content" id="totalConfirmed"></p>
                     </td>
                 </tr>
                 <tr>
-                     <td>Total Deaths: </td>
+                     <td class="table-hd">Total Deaths: </td>
                      <td>
                     <p class="content" id="totalDeaths"></p>
                     </td>
                     </tr>
                 <tr>
-                     <td>Total Recovered: </td>
+                     <td class="table-hd">Total Recovered: </td>
                      <td>
                     <p class="content" id="totalRecovered"></p>
                     </td>
                     </tr>
                 <tr>
-                     <td>New Confirmed: </td>
+                     <td class="table-hd">New Confirmed: </td>
                      <td>
                     <p class="content" id="newConfirmed"></p>
                     </td>
                     </tr>
                <tr>
-                 <td>New Deaths: </td>
+                 <td class="table-hd">New Deaths: </td>
                  <td>
                 <p class="content" id="newDeaths"></p>
                 </td>
                 </tr>
                <tr>
-                 <td>New Recovered: </td>
+                 <td class="table-hd">New Recovered: </td>
                  <td>
                 <p class="content" id="newRecovered"></p>
                 </td>
