--- a/template_src/www/index.html
+++ b/template_src/www/index.html
@@ -35,9 +35,11 @@
         <ons-tabbar swipeable position="bottom">
             <ons-tab page="first-template" label="Home" icon="md-home" active>
             </ons-tab>
-            <ons-tab page="pref-template" label="Preferences" icon="md-settings">
+            <ons-tab page="prevention-template" label="Prevention" icon="md-face">
             </ons-tab>
             <ons-tab page="list-template" label="List" icon="md-book">
+            </ons-tab>
+            <ons-tab page="pref-template" label="Preferences" icon="md-settings">
             </ons-tab>
         </ons-tabbar>
     </ons-page>
@@ -53,6 +55,17 @@
                 </div>
         </ons-page>
     </template>
+
+<!--  PREVENTION TEMPLATE  -->
+     <template id="prevention-template">
+        <ons-page id="first-page">
+                <div class="content content-container">
+                        <h1> COVID-19 Prevention </h1>
+                </div>
+        </ons-page>
+    </template>
+
+
     <template id="pref-template">
         <ons-page id="pref-page">
             
