Added images and prevention tips

--- a/template_src/www/index.html
+++ b/template_src/www/index.html
@@ -61,6 +61,34 @@
         <ons-page id="first-page">
                 <div class="content content-container">
                         <h1> COVID-19 Prevention </h1>
+                        <div class="prevention-card"> 
+                            <table>
+                                <tr class="prevention-row">
+                                <td> <h2>Wear a mask </h2><span class="prevention-text">Wear a cloth face mask in public to protect others and yourself.</span></td>
+                                <td> <img class="covid-svg" src="img/mask-girl.svg"></td>
+                            </tr>
+                                 <tr>
+                                <td> <img class="covid-svg" src="img/wash.svg"></td>
+                                <td> <h2>Wash your hands</h2><span class="prevention-text">Wash your hands often or use hand sanitizer.</span></td>
+                            </tr>
+                             <tr>
+                                <td> <h2>Distance yourself</h2><span class="prevention-text"> Keep 2m distance from others when in public.</span></td>
+                                <td> <img class="covid-svg" src="img/distance.svg"></td>
+                            </tr>
+                             <tr>
+                                <td> <img class="covid-svg" src="img/keep-track.svg"></td>
+                                <td> <h2>Keep track</h2><span class="prevention-text">Make a list of the people you contact and notify them if you contract COVID-19.</span></td>
+                            </tr>
+                            <tr>
+                                <td> <h2>Stay home</h2><span class="prevention-text"> Avoid leaving the house when you can, and stay home if you feel sick. </span></td>
+                                <td> <img class="covid-svg" src="img/home.svg"></td>
+                            </tr>
+                             <tr>
+                                <td> <img class="covid-svg" src="img/doctor.svg"></td>
+                                <td> <h2>Get tested</h2><span class="prevention-text">Contact a medical professional for a COVID-19 test if experiencing symptoms.</span></td>
+                            </tr>
+                            </table>
+                        </div>
                 </div>
         </ons-page>
     </template>
