--- a/template_src/www/index.html
+++ b/template_src/www/index.html
@@ -53,6 +53,53 @@
                     </div>
                     <div span id="msgSpace"></div>
                 </div>
+
+                <div class="center desc-card" style="padding-left: 10%;">
+                    <table>
+                    <tr> 
+                         <td class="table-hd">Total Confirmed: </td>
+                         <td>
+                        <p class="content" id="home-totalConfirmed"></p>
+                        </td>
+                    </tr>
+                    <tr>
+                         <td class="table-hd">Total Deaths: </td>
+                         <td>
+                        <p class="content" id="home-totalDeaths"></p>
+                        </td>
+                        </tr>
+                    <tr>
+                         <td class="table-hd">Total Recovered: </td>
+                         <td>
+                        <p class="content" id="home-totalRecovered"></p>
+                        </td>
+                        </tr>
+                    <tr>
+                         <td class="table-hd">New Confirmed: </td>
+                         <td>
+                        <p class="content" id="home-newConfirmed"></p>
+                        </td>
+                        </tr>
+                   <tr>
+                     <td class="table-hd">New Deaths: </td>
+                     <td>
+                    <p class="content" id="home-newDeaths"></p>
+                    </td>
+                    </tr>
+                   <tr>
+                     <td class="table-hd">New Recovered: </td>
+                     <td>
+                    <p class="content" id="home-newRecovered"></p>
+                    </td>
+                    </tr>
+                    <tr>
+                         <td>
+                        <p class="content" style="position:absolute; bottom: 20px;" id="date"></p>
+                        </td>
+                    </tr>
+                    </table>
+                </div>
+
         </ons-page>
     </template>
 
