--- a/template_src/www/index.html
+++ b/template_src/www/index.html
@@ -173,7 +173,8 @@
 
         
                    <!-- MODAL -->
-              <ons-modal direction="up">
+              <ons-modal  direction="up">
+            <div class="modal-container">
                 <p class="content" id="countryName"></p>
                 <p class="content" id="totalConfirmed"></p>                 
                 <p class="content" id="totalDeaths"></p>                  
@@ -183,8 +184,9 @@
                 <p class="content" id="newRecovered"></p>              
                 <p class="content" style="position:absolute; bottom: 20px;" id="date"></p>  
                 <div style="text-align: center">                  
-                  <button onclick="hideModal();">Close</button>
+                  <button onclick="hideModal();" icon="md-close" class="btn-primary">Close</button>
                 </div>
+            </div>
               </ons-modal>
 
 
