Attach modal js

--- a/template_src/www/index.html
+++ b/template_src/www/index.html
@@ -328,7 +328,7 @@
             <ons-icon icon="md-spinner" size="100px" spin></ons-icon>
         </div>
     </ons-modal>
-
+    <script type="text/javascript" src="js/listModal.js"></script>
     <script type="text/javascript" src="js/covid-id.js"></script>
     <script type="text/javascript" src="js/userPref.js"></script>
     <script type="text/javascript" src="js/covid.js"></script>
