--- a/template_src/www/splash.html
+++ b/template_src/www/splash.html
@@ -30,11 +30,14 @@
         <link rel="stylesheet" type="text/css" href="css/index.css">
 
         <title> COVID-19 Tracker App - Start Screen </title>
+
+        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" type="text/css" href="css/splash.css"> 
     </head>
     <body id="splash">
         
         <div class="app">
-            <h1>COVID-19 Tracker</h1>
+            <h1 id="splash-text">COVID-19 Tracker</h1>
             <p class="intro-txt"> Your one stop shop for global COVID-19 data.</p>
             
             <a href="./index.html">
