--- a/template_src/www/index.html
+++ b/template_src/www/index.html
@@ -24,8 +24,19 @@
 
 <body>
 
+<ons-navigator id="myNavigator" page="first"> </ons-navigator> 
 
 
+<template id="first">
+        <ons-page id="first">
+
+            <ons-button class="button" id="push-button" onclick="pushButton()"> Sign Up </ons-button>
+
+</ons-page>
+</template>
+
+<template id="tabbar-template">
+        <ons-page id="tabbar-page">
     <ons-tabbar swipeable position="bottom">
         <ons-tab page="first-template" label="Home" icon="md-home" active>
         </ons-tab>
@@ -36,8 +47,9 @@
         <ons-tab page="pref-template" label="Preferences" icon="md-settings">
         </ons-tab>
     </ons-tabbar>
+</ons-page>
+</template>
 
-    </ons-page>
     <template id="first-template">
         <ons-page id="first-page">
                 <div class="content content-container">
@@ -235,7 +247,6 @@
                 </div>
             </div>
 
-           <!--  <ons-button class="button" id="push-button"> Sign Up </ons-button> -->
         </ons-page>
     </template>
 
