--- a/template_src/www/index.html
+++ b/template_src/www/index.html
@@ -102,7 +102,7 @@
                             Submit
                         </ons-button>
 
-                         <ons-button class="button" id="push-button" onclick="pushButton3()">Continue</ons-button>
+                         <ons-button class="button" id="push-button" onclick="pushButtonDash()">Continue</ons-button>
 
                     </div>
                         
